--- a/_includes/greeting.html
+++ b/_includes/greeting.html
@@ -1,8 +1,8 @@
   </div>
   <div class="container">
     <div id="welcome-greeting">
-      <h1>欢迎您降落此处！</h1>
-      <h2>This is <a href="https://github.com/arnp/herring-cove">Herring Cove</a>, a minimal theme built for <a href="http://jekyllrb.com"> Jekyll</a>. It features a number distinctive features such as a fixed sidebar and a showcase image. It's also easily configurable and editable to your liking. <br><br> On this test site, you will find some blog posts, interesting links, and more. You'll also find a number of ways to get in touch.</h2>
+      <h2>欢迎您降落此处！</h2>
+      <h4>This is <a href="https://github.com/arnp/herring-cove">Herring Cove</a>, 一个极简风格的博客<a href="http://jekyllrb.com"> Jekyll</a>主题。<br>这其实是我第二次建博客了，第一次搭建在家用NAS上，但十分不稳定，而且需要端口转发，所以这次托管在了GitHub上。希望我的coding技术学有所成。 <br><br> 这个小站，目前正在施工中，而且可能不会更新得特别勤快，就慢慢填坑吧^_^</h4>
       <hr />
     </div>
   </div>
