--- a/css/hc.css
+++ b/css/hc.css
@@ -4,16 +4,16 @@
 body
 {
   color:#2c3e50;
-  background-color:#f0f0f0;
+  background-color:#D8BFD8;
   width:100%;
-  border-top:solid #d90006;
-  border-width:4px
+  border-top:solid #4B0082;
+  border-width:8px
 }
 
 h1,h2,h3,h4,h5,h6
 {
   font-family:"Helvetica Neue", helvetica, "Open Sans", sans-serif;
-  color:#d90006
+  color:#191970
 }
 
 h1
