--- a/css/hc.css
+++ b/css/hc.css
@@ -4,7 +4,7 @@
 body
 {
   color:#2c3e50;
-  background-color:#D8BFD8;
+  background-color:	#E6E6FA;
   width:100%;
   border-top:solid #4B0082;
   border-width:8px
