--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="footer">
   <footer>
     <p class="text-muted credit">
       &copy; {{ site.time | date: '%Y' }} {{ site.name }} &middot;
