--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,18 @@
 ---
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ch">
+
+  <script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?a9f701409be5f7428189064938a4d891";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
+
   <head>
     {% include header.html %}
   </head>
