--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,10 +11,10 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-      <li><a href="{{ site.baseurl }}/list.html">List</a></li>
-      <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
-      <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
-      <li><a href="{{ site.baseurl }}/about.html">About</a></li>
+      <li><a href="{{ site.baseurl }}/list.html">文章列表</a></li>
+      <li><a href="{{ site.baseurl }}/links.html">待改进</a></li>
+      <li><a href="{{ site.baseurl }}/projects.html">微小的工作</a></li>
+      <li><a href="{{ site.baseurl }}/about.html">关于</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
