--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,10 +25,10 @@
   <ul class="sidebar-nav">
     <li class="sidebar-brand"><a href="{{ site.baseurl }}/"><h1 class="brand">{{ site.name }}</h1></a><h3>{{ site.description }}</h3></li>
     <hr />
-    <li><a href="{{ site.baseurl }}/list.html">List</a></li>
-    <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
-    <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
-    <li><a href="{{ site.baseurl }}/about.html">About</a></li>
+    <li><a href="{{ site.baseurl }}/list.html">随笔列表</a></li>
+    <li><a href="{{ site.baseurl }}/links.html">链接（待改）</a></li>
+    <li><a href="{{ site.baseurl }}/projects.html">辣鸡项目</a></li>
+    <li><a href="{{ site.baseurl }}/about.html">关于我</a></li>
     <hr />
     <div id="social-wrapper">
       <li> <a href="{{ site.twitter }}"><i class="fa fa-twitter-square"></i> @twitter</a></li>
