--- a/css/hc.css
+++ b/css/hc.css
@@ -98,7 +98,7 @@ bottom:0;
   margin-left:-250px;
   left:250px;
   width:250px;
-  background:#f8f8f8;
+  background:#9370DB;
   position:fixed;
   height:100%;
   overflow-y:auto;
@@ -394,7 +394,7 @@ img
 #article
 {
   margin-bottom:30px;
-  background-color:#f9f9f9;
+  background-color:	#483D8B;
   box-shadow:1px 1px 0 1px #e8e8e8;
   padding:10px 40px 0
 }
