--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -27,7 +27,7 @@
     <hr />
     <li><a href="{{ site.baseurl }}/list.html">随笔列表</a></li>
     <li><a href="{{ site.baseurl }}/links.html">链接（待改）</a></li>
-    <li><a href="{{ site.baseurl }}/projects.html">辣鸡项目</a></li>
+    <li><a href="{{ site.baseurl }}/projects.html">我的项目</a></li>
     <li><a href="{{ site.baseurl }}/about.html">关于我</a></li>
     <hr />
     <div id="social-wrapper">
