--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,8 @@
 <title>{{ page.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ site.description }}">
-<link rel="icon" href="{{ site.baseurl }}/images/favicons/icon/Spell_Book.ico" />
+<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/icon/Spell_Scroll.ico" type="image/x-icon">
+<link rel="icon" sizes="any"  href="{{ site.baseurl }}/images/favicons/SVG/Spell_Scroll.svg">
 <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/css/hc.css" rel="stylesheet">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
