update daily posts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <footer>
     <p class="text-muted credit">
       &copy; {{ site.time | date: '%Y' }} {{ site.name }} &middot;
-      <a href="https://github.com/"> Supported by Github Pages </a>
+      Supported by <a href="https://github.com/"> Github Pages </a>
       {{ site.time }}
     </p>
   </footer>
